[package]
name = "prometheus_web_exporter"
version = "0.1.6"
authors = ["Huseyin Yilmaz <yilmazhuseyin@gmail.com>"]
edition = "2018"
description = "Web exporter for prometheus"
repository = "https://github.com/huseyinyilmaz/web_exporter"
readme = "README.md"
license-file = "LICENSE"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = {version = "0.2", features = ["compression"]}
reqwest = {version = "0.10.4", default-features = false, features = ["rustls-tls", "json"]} # remove openssl dependency from reqwest.
# reqwest = "0.10.4"
log = "0.4"
pretty_env_logger = "0.4"
scraper = "0.11.0"
config = "0.10.1"
serde = { version = "1.0.106", features = ["derive"] }
futures = "0.3.4"